# native-runner

./: Cargo.toml  bind-blob.rs  bind.rs  wasmcloud.toml
src/: bindings.rs  main.rs
wit/: provider.wit
