[package]
name = "wasmcloud-runner-provider"
version = "0.1.0"
edition = "2021"
description = """
A capability provider that satisfies the 'wasmcloud:messaging' interface using NATS as a backend.
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
async-trait = "0.1.56"
anyhow = "1.0.86"
async-nats = "0.35.1"
bytes = "1.6.0"
futures = "0.3.30"
serde = { version = "1.0.203" , features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1.37.0", features = [ "full" ] }
tracing = "0.1.40"
wasmbus-rpc = "0.15.0"
wasmcloud-component = "0.2.0"
wasmcloud-provider-sdk = "0.9.1"
wasmcloud-tracing = "0.11.0"
wit-bindgen =  { version = "0.34.0" }
wit-bindgen-wrpc = "0.6.3"

